fixed right align on homepage

--- a/assets/scss/components/home_slides/_react.scss
+++ b/assets/scss/components/home_slides/_react.scss
@@ -1,4 +1,5 @@
 #slide-ionic-react {
+  clear: both;
   padding-block-start: 100px !important;
   padding-block-end: 220px !important;
   display: flex;
